Fix modal spacing and images behavior, add panel title link element, fix labels color

--- a/sass/blocks/_toss-modal.sass
+++ b/sass/blocks/_toss-modal.sass
@@ -83,6 +83,14 @@ $block: ".toss-modal"
     margin-top: 200px
     margin-bottom: 200px
 
+    @media screen and (max-width: 640px), screen and (max-height: 640px)
+      margin-top: 100px
+      margin-bottom: 100px
+
+    @media screen and (max-width: 480px), screen and (max-height: 480px)
+      margin-top: 50px
+      margin-bottom: 50px
+
   &_type_full-height
     display: flex
     flex-direction: column
@@ -121,6 +129,9 @@ $block: ".toss-modal"
     background-color: transparent
     cursor: pointer
     outline: none
+
+    @media screen and (max-width: 480px), screen and (max-height: 480px)
+      top: 10px
 
     &:after
       content: '\e91e'
@@ -268,11 +279,20 @@ $block: ".toss-modal"
     max-width: 200px
     margin-bottom: 20px
 
+    @media screen and (max-width: 480px), screen and (max-height: 480px)
+      max-width: 150px
+
     &_size_s
       max-width: 150px
 
+      @media screen and (max-width: 480px), screen and (max-height: 480px)
+        max-width: 100px
+
     &_size_l
       max-width: 250px
+
+      @media screen and (max-width: 480px), screen and (max-height: 480px)
+        max-width: 200px
 
 
   // $Modal window title
