--- a/sass/blocks/_toss-panel.sass
+++ b/sass/blocks/_toss-panel.sass
@@ -486,6 +486,18 @@ $block: ".toss-panel"
   &__title-light
     font-weight: 300
 
+
+  // $Panel title link
+  &__title-link
+    font-family: inherit
+    font-size: inherit
+    color: inherit
+    text-decoration: none
+
+    &:hover
+      text-decoration: underline
+
+
   // $Panel text
   &__text
     display: block
@@ -514,6 +526,17 @@ $block: ".toss-panel"
   // $Panel text light
   &__text-light
     font-weight: 300
+
+
+  // $Panel text link
+  &__text-link
+    font-family: inherit
+    font-size: inherit
+    color: inherit
+    text-decoration: none
+
+    &:hover
+      text-decoration: underline
 
 
   // $Panel link
